# lab_alg_2_3_sorting

./: .gitignore  CMakeLists.txt  README.md
src/app/: main.cpp  menu.cpp  menu.hpp
src/ds/: sort.cpp  sort.hpp
